fix(registration): throws null when using map ( route GET `/{id}` )
fix(test/registration): incorrect expectation ( `getSelfRegistration_notFound_returnsEmptyBody` )